<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">이름</string>
    <string name="weight">몸무게 (kg)</string>
    <string name="height">키 (cm)</string>
    <string name="time">시간 (분)</string>
    <string name="distance">거리 (km)</string>
    <string name="gender">성별</string>
    <string name="age">나이</string>
    <string name="injuries">과거 부상 이력</string>


    <string name="is_empty">공백을 확인해주세요!</string>
    <string name="get_gender">성별을 알려주세요</string>
    <string name="FEMALE">여성</string>
    <string name="MALE">남성</string>
    <string name="use_ai">AI 코칭 플랜에 사용됩니다</string>
    <string name="how_often_run">평소에 얼마나 뛰시나요?</string>
    <string name="mean_cadence">평균 케이던스</string>
    <string name="mean_pace">평균 페이스 (분,초)</string>
    <string name="_1_4">(1/4)</string>
    <string name="_1_3">(1/3)</string>
    <string name="select_coach">코치님을 선택해주세요</string>
    <string name="mike">Mike 코치</string>
    <string name="red_tag">#엄격한 #열정 #할 수 있습니다!</string>
    <string name="jamie">Jamie 코치</string>
    <string name="yellow_tag">#격려 #칭찬 #함께해봐요</string>
    <string name="blue_tag">#유머러스 #사투리 #가보입시다</string>
    <string name="doris">Doris 코치</string>
    <string name="inst_plan_ing">진행중인 플랜</string>
    <string name="inst_plan_ed">완료된 플랜</string>
    <string name="set_goal">코치와 함께 목표를 설정해 주세요</string>
    <string name="like_week">선호 요일을 선택해 주세요</string>
    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="title_result">훈련결과</string>
    <string name="title_distance">이동 거리\u00A0:\u00A0</string>
    <string name="title_time">소요 시간\u00A0:\u00A0</string>
    <string name="title_pace">평균 페이스\u00A0:\u00A0</string>
    <string name="title_heart">평균 심박수\u00A0:\u00A0</string>
    <string name="title_step">케이던스\u00A0:\u00A0</string>
    <string name="title_kcal">운동 칼로리\u00A0:\u00A0</string>
    <string name="coach_talk_title">코치의 한마디</string>
    <string name="pace">페이스</string>
    <string name="heart">심박수</string>
    <string name="step">케이던스</string>

    <string name="train_rest_message">다리 근육을 풀어주면 어떨까요?</string>
    <string name="inst_fix_profile">내 정보 수정</string>
    <string name="inst_set_can">권한 설정</string>
    <string name="inst_logout">로그아웃</string>
    <string name="train">총 훈련 횟수</string>
    <string name="train_time">누적 훈련 시간</string>
    <string name="train_km">누적 훈련 거리</string>
    <string name="plain_height">키</string>
    <string name="plain_weight">몸무게</string>
    <string name="modify_done">수정완료</string>
    <string name="goal">훈련 목표</string>
    <string name="warning">※ 훈련 목표는 훈련 과정에 따라 재조정 될 수 있습니다.</string>
    <string name="health_time">운동 시간</string>
    <string name="health_count">운동 횟수</string>
    <string name="plan">맞춤형 러닝 플랜</string>
    <string name="plan_period">훈련 기간</string>
    <string name="plan_week">훈련 요일</string>
    <string name="plan_count">훈련 횟수</string>
    <string name="plan_week_title">훈련 일정\u00A0:\u00A0</string>
    <string name="plan_week_modify">훈련 요일 수정</string>
    <string name="plan_modify">훈련 수정</string>
    <string name="plan_delete">훈련 삭제</string>
    <string name="go_back_to_home">홈으로 이동하기</string>
    <string name="cancel">취소</string>
    <string name="check">확인</string>
    <string name="delete_explain">훈련을 삭제하시겠습니까?\n훈련을 삭제하면 다시 복구할 수 없습니다.</string>
    <string name="km">km</string>
    <string name="send">전송</string>
    <string name="create">생성</string>
    <string name="nothing">진행중인 훈련이 없어요</string>
    <string name="zone5">5. 최대 심박수 운동</string>
    <string name="zone4">4. 무산소 운동</string>
    <string name="zone3">3. 유산소 운동</string>
    <string name="zone2">2. 체중 조절 운동</string>
    <string name="zone1">1. 저강도 운동</string>

</resources>