<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title_modify"
        style="@style/RankText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_24"
        android:text="@string/plan_week"
        app:layout_constraintBottom_toTopOf="@id/cl_week"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_18"
        android:layout_marginEnd="@dimen/margin_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_title_modify"
        app:layout_constraintTop_toBottomOf="@id/tv_title_modify">

        <ToggleButton
            android:id="@+id/tb_sun"
            style="@style/DayToggleButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/sun"
            android:textColor="@color/reversePrimary"
            android:textSize="@dimen/text_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/tb_mon"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/tb_mon"
            style="@style/DayToggleButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/mon"
            android:textSize="@dimen/text_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/tb_tue"
            app:layout_constraintStart_toEndOf="@id/tb_sun"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/tb_tue"
            style="@style/DayToggleButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/tue"
            android:textSize="@dimen/text_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/tb_wed"
            app:layout_constraintStart_toEndOf="@id/tb_mon"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/tb_wed"
            style="@style/DayToggleButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/wed"
            android:textSize="@dimen/text_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/tb_thu"
            app:layout_constraintStart_toEndOf="@id/tb_tue"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/tb_thu"
            style="@style/DayToggleButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/thu"
            android:textSize="@dimen/text_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/tb_fri"
            app:layout_constraintStart_toEndOf="@id/tb_wed"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/tb_fri"
            style="@style/DayToggleButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/fri"
            android:textSize="@dimen/text_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/tb_sat"
            app:layout_constraintStart_toEndOf="@id/tb_thu"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/tb_sat"
            style="@style/DayToggleButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/sat"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tb_fri"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_cancel"
        style="@style/WhiteBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_8"
        android:backgroundTint="@color/reversePrimary"
        android:text="@string/cancel"
        android:textSize="@dimen/text_14"
        app:layout_constraintEnd_toStartOf="@id/btn_ok"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_week" />

    <Button
        android:id="@+id/btn_ok"
        style="@style/WhiteBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_30"
        android:backgroundTint="@drawable/button_background_selector"
        android:text="@string/check"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_week" />


</androidx.constraintlayout.widget.ConstraintLayout>