<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title_delete"
        style="@style/RankText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_24"
        android:text="@string/plan_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_text_delete"
        style="@style/SmallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/delete_explain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_delete" />


    <Button
        android:id="@+id/btn_cancel"
        style="@style/WhiteBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_8"
        android:backgroundTint="@color/reversePrimary"
        android:text="@string/cancel"
        android:textSize="@dimen/text_14"
        app:layout_constraintEnd_toStartOf="@id/btn_ok"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text_delete" />

    <Button
        android:id="@+id/btn_ok"
        style="@style/WhiteBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_30"
        android:backgroundTint="@color/primary"
        android:text="@string/check"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>