<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_result_title"
        style="@style/BoldLargeText"
        android:text="@string/title_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result_distance_title"
        style="@style/ResultText"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/title_distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result_title" />

    <TextView
        android:id="@+id/tv_result_distance_content"
        style="@style/PlanText"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="@+id/tv_result_distance_title"
        app:layout_constraintStart_toEndOf="@id/tv_result_distance_title"
        app:layout_constraintTop_toTopOf="@id/tv_result_distance_title"
        tools:text="10km" />

    <TextView
        android:id="@+id/tv_result_time_title"
        style="@style/ResultText"
        android:text="@string/title_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result_distance_title" />

    <TextView
        android:id="@+id/tv_result_time_content"
        style="@style/PlanText"
        tools:text="01:08:48"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="@+id/tv_result_time_title"
        app:layout_constraintStart_toEndOf="@id/tv_result_time_title"
        app:layout_constraintTop_toTopOf="@id/tv_result_time_title" />

    <TextView
        android:id="@+id/tv_result_pace_title"
        style="@style/ResultText"
        android:text="@string/title_pace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result_time_title" />

    <TextView
        android:id="@+id/tv_result_pace_content"
        style="@style/PlanText"
        tools:text="06'48''"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="@+id/tv_result_pace_title"
        app:layout_constraintStart_toEndOf="@id/tv_result_pace_title"
        app:layout_constraintTop_toTopOf="@id/tv_result_pace_title" />

    <TextView
        android:id="@+id/tv_result_heart_title"
        style="@style/ResultText"
        android:layout_marginStart="@dimen/margin_100"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/title_heart"
        app:layout_constraintEnd_toStartOf="@id/tv_result_heart_content"
        app:layout_constraintTop_toBottomOf="@id/tv_result_title" />

    <TextView
        android:id="@+id/tv_result_heart_content"
        style="@style/PlanText"
        tools:text="150bpm"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="@+id/tv_result_heart_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_result_heart_title" />

    <TextView
        android:id="@+id/tv_result_step_title"
        style="@style/ResultText"
        android:text="@string/title_step"
        app:layout_constraintStart_toStartOf="@+id/tv_result_heart_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_heart_title" />

    <TextView
        android:id="@+id/tv_result_step_content"
        style="@style/PlanText"
        tools:text="130spm"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="@+id/tv_result_step_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_result_step_title" />

    <TextView
        android:id="@+id/tv_result_kcal_title"
        style="@style/ResultText"
        android:text="@string/title_kcal"
        app:layout_constraintStart_toStartOf="@id/tv_result_step_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_step_title" />

    <TextView
        android:id="@+id/tv_result_kcal_content"
        style="@style/PlanText"
        tools:text="310kcal"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="@+id/tv_result_kcal_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_result_kcal_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ly_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_pace_title">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart_pace"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toStartOf="@+id/chart_heart"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/SmallBoldText"
            android:text="@string/pace"
            app:layout_constraintEnd_toEndOf="@+id/chart_pace"
            app:layout_constraintStart_toStartOf="@+id/chart_pace"
            app:layout_constraintTop_toBottomOf="@+id/chart_pace" />

        <TextView
            android:id="@+id/rank_pace"
            style="@style/RankText"
            tools:text="A"
            app:layout_constraintBottom_toBottomOf="@+id/chart_pace"
            app:layout_constraintEnd_toEndOf="@+id/chart_pace"
            app:layout_constraintStart_toStartOf="@+id/chart_pace"
            app:layout_constraintTop_toTopOf="@+id/chart_pace" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart_heart"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toStartOf="@+id/chart_step"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/chart_pace"
            app:layout_constraintTop_toTopOf="@+id/chart_pace" />

        <TextView
            style="@style/SmallBoldText"
            android:text="@string/heart"
            app:layout_constraintEnd_toEndOf="@+id/chart_heart"
            app:layout_constraintStart_toStartOf="@+id/chart_heart"
            app:layout_constraintTop_toBottomOf="@+id/chart_heart" />

        <TextView
            android:id="@+id/rank_heart"
            style="@style/RankText"
            tools:text="B"
            app:layout_constraintBottom_toBottomOf="@+id/chart_heart"
            app:layout_constraintEnd_toEndOf="@+id/chart_heart"
            app:layout_constraintStart_toStartOf="@+id/chart_heart"
            app:layout_constraintTop_toTopOf="@+id/chart_heart" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart_step"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/chart_heart"
            app:layout_constraintTop_toTopOf="@+id/chart_pace" />

        <TextView
            style="@style/SmallBoldText"
            android:text="@string/step"
            app:layout_constraintEnd_toEndOf="@+id/chart_step"
            app:layout_constraintStart_toStartOf="@+id/chart_step"
            app:layout_constraintTop_toBottomOf="@+id/chart_step" />

        <TextView
            android:id="@+id/rank_step"
            style="@style/RankText"
            tools:text="A"
            app:layout_constraintBottom_toBottomOf="@+id/chart_step"
            app:layout_constraintEnd_toEndOf="@+id/chart_step"
            app:layout_constraintStart_toStartOf="@+id/chart_step"
            app:layout_constraintTop_toTopOf="@+id/chart_step" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>