<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_24"
    android:layout_marginVertical="@dimen/margin_24"
    android:background="@drawable/rounded_background_skyblue"
    android:paddingHorizontal="@dimen/padding_22"
    android:paddingVertical="@dimen/padding_10">

    <TextView
        android:id="@+id/tv_title_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/gender"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_title_age"
        app:layout_constraintTop_toBottomOf="@id/tv_title_age" />

    <TextView
        android:id="@+id/tv_title_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/height"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_title_age"
        app:layout_constraintTop_toBottomOf="@id/tv_title_gender" />

    <TextView
        android:id="@+id/tv_title_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/weight"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_title_age"
        app:layout_constraintTop_toBottomOf="@id/tv_title_height" />

    <TextView
        android:id="@+id/tv_title_injuries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/injuries"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_title_age"
        app:layout_constraintTop_toBottomOf="@id/tv_title_weight" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_title_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title_age" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_title_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title_gender" />

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_title_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title_height" />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_title_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title_weight" />

    <TextView
        android:id="@+id/tv_injuries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_title_injuries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title_injuries" />

</androidx.constraintlayout.widget.ConstraintLayout>